{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "97a0b454-1e5c-4e1e-816c-c27acb6db03c",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "06b2aa77-bf70-474f-bdbe-2e41b6e240c8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "d7cea711-d8f4-415b-a7aa-e4c4c6460939",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "89b6e41c-cd0b-40af-b34c-c6a924ae7a11",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Objectives",
                    "type": "Button",
                    "id": "6a0101db-dfcd-45ca-bcaa-9aca617235d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "3d53b0a2-248c-41dc-b01b-943f0f6d74a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "84a2922d-2776-4aa7-92b0-db235678fcde",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "Grab",
                    "type": "PassThrough",
                    "id": "c810259c-9626-4a52-8085-5578f14507a5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Throw",
                    "type": "PassThrough",
                    "id": "6aa121e3-cfbf-4fcc-b88d-337e433b3c00",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use",
                    "type": "PassThrough",
                    "id": "70584cdf-4281-438d-86cd-c70171f508d7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "43e2faef-e223-4fcd-ab98-7b829c875bac",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "382923f3-b4f2-439a-8444-bb2e4d6ebb0c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "37d0e67e-a874-4f5a-b3f5-2e6ee261196b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "78232269-6955-4f56-a7f6-96b76e6561b7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "53a95117-1b9a-49cc-8a0c-530fb80299cf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f2d20898-55bc-442b-ae4e-5261b45c1ffd",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02820234-de1a-4cf5-84ad-56073f787036",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f59cff7-b3ce-4542-b69f-317bd7224b65",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Objectives",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3c2a366-0029-4eb7-b178-5891bbe6940a",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45a22677-f494-46fe-a4b9-2af1c132958b",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0819115c-5bd3-48d9-b3b9-9c24584addba",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f34e52f0-2925-4ad7-9047-9e494e2eeab7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ac96a0e-d10f-47a9-9355-69b4082742a2",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}